# bridge-solana

./: .env.example  .gitignore  README.md  pyproject.toml
app/application/api/: main.py
app/application/api/contract/: handlers.py  schemas.py
app/domain/entities/: contract.py
app/domain/exceptions/: base.py  contract.py
app/domain/values/: base.py  contract.py
app/infra/ai_client/: open_ai.py
app/infra/repository/postgresql/: database.py
app/logic/analysis/: analysis_service.py  analyzer.py
app/logic/deploy/: solana_deployer.py
app/logic/generation/: generation_service.py  static_prompt.py
app/project/: containers.py
app/project/configs/: general.py
docker_compose/: app.yaml
