[tool.poetry]
name = "bridge-solana"
version = "0.1.0"
description = ""
authors = ["Mechislav <93447863+Mechislav1989@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
