[tool.poetry]
name = "bridge-solana"
version = "0.1.0"
description = ""
authors = ["Mechislav <93447863+Mechislav1989@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
ruff = "^0.9.6"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
base58 = "^2.1.1"
sqlalchemy = "^2.0.38"
openai = "^1.63.2"
pydantic-settings = "^2.7.1"
punq = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
